Fixed logos aspect ratio on IE

--- a/owncloud-login-styles.css
+++ b/owncloud-login-styles.css
@@ -55,6 +55,7 @@
 }
 
 #login-form #logo {
+	width: 100%;
 	max-width: 269px;
 	margin-bottom: 20px;
 }
